# liblz

./: CMakeLists.txt  README.md
includes/LZ/: error.h  file_utils.h  maths.h  string_utils.h
src/maths/: vec2.cpp
